...
                }
            },
            floatingActionButton = {
                if ((!keyboardOpen.value) && showMap && (fullscreenMap.value || !routePlaying)) {
                    FullScreenMapFab(
                        fullscreenMap,
                        Modifier.testTag("homeFullScreenMap"),
                    )
                }
            },
            contentWindowInsets = WindowInsets(0, 0, 0, 0),
        ) { innerPadding ->
            if (newReleaseDialog.value) {
...
