...
                        onClick = {
                            onDelete(locationDescription.databaseId)
                        },
                        modifier = Modifier
                            .fillMaxWidth()
                            .mediumPadding()
                            .testTag("saveMarkerDeleteButton"),
                        buttonColor = MaterialTheme.colorScheme.errorContainer,
                        contentColor = MaterialTheme.colorScheme.onErrorContainer,
                        shape = RoundedCornerShape(spacing.small),
                        text = stringResource(Res.string.markers_action_delete),
                        textStyle = MaterialTheme.typography.bodyLarge,
                        fontWeight = FontWeight.Bold,
...
            ) {
                CustomTextField(
                    fieldName = stringResource(Res.string.markers_sort_button_sort_by_name),
                    fieldHint = stringResource(Res.string.marker_name_description_hint),
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("markerName"),
                    value = name,
                    onValueChange = { name = it },
                    testTagPreFix = "name",
                )
                Spacer(modifier = Modifier.height(spacing.medium))
                CustomTextField(
...
